--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </div>
 <br>
 <br>
-<p><marquee bgcolor="yellow"><font color="black"><b>+++Diese Woche wird es sehr war. Deshalb viel Wasser trinken!!!+++</b></marquee></p>
+<p><marquee bgcolor="yellow"><font color="black"><b>+++Diese Homepage befindet sich noch im Aufbau!!!+++</b></marquee></p>
 <br>
 <center>
 <table width="75%" border="1px"  bgcolor="black" bordercolor="black">
