--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body id="background">
 <meta charset="UTF-8">
 <center>
-<h1><i>Schwabaländle Online</i></h1>
+<h1><i>Schwäbische Kreativität</i></h1>
 </center>
 <div style="background-color:#A9A9F5;
 			width:100%;
@@ -146,7 +146,7 @@ window.attachEvent("onload", startscroller)
 <div align="left"><img src="Geburtstagsschub.jpg" width="960px" height="300px"></div></div>
 
 <div id="dropmsg2" class="dropcontent" subject="VVVVVVVV">
-<div align="left">Sky ändert Sende-Plan bei der Bundesliga<br> Sky 90 wandert wieder auf den alten Sendeplatz zurück<br>Vorberichte fangen wieder am Samstag um 14:00uhr an<br> weiter Informationen bitte hier klicken</div>
+<div align="left">Formel1: Qualifying findet am Sonntag den 13.Oktober2019 statt<br> Sky überträgt ab 2:55Uhr live auf SKY Sport 1 HD !<br></div>
 </div>
 </td>
 </tr>
