--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       </ul>
     </li>
 
-    <li class="submenu"><a href="#" title="Unser Produktsortiment">Bundsliga</a>
+    <li class="submenu"><a href="#" title="Unser Produktsortiment">JAVA</a>
       <ul>
-        <li><a href="Bundesligatabelle.html" title="Unser Obstsortiment">Tabelle</a></li>
-        <li><a href="#" title="Unser Gemüse">Teams</a></li>
-		<li><a href="#" title="Unser Gemüse">Alle Zuschauer</a></li>
-		<li><a href="#" title="Unser Gemüse">TOP 10 Torjäger</a></li>		
+        <li><a href="Bundesligatabelle.html" title="Unser Obstsortiment">Software</a></li>
+        <li><a href="#" title="Unser Gemüse">Aufbau </a></li>
+		<li><a href="#" title="Unser Gemüse">Beispiele</a></li>
+		<li><a href="#" title="Unser Gemüse">News zu Java</a></li>		
       </ul>
     </li>
     <li class="submenu"><a href="#" title="HTML-Datein">Erstellen von HTML-Datein</a>
@@ -51,7 +51,6 @@
                   </ul>
 	</li>	
     <li><a href="CoC.html">Clash of Clans</a></li>
-    <li><a href="#" title="Rechtliches">Kontakt</a></li>
 	<li><a href="#" title="Rechtliches">Impressum</a></li>
   </ul>
 </nav>
