--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 	<head>
-		<title>Bennys Homepage</title>
+		<title>Schwäbische Kreativität</title>
 		<link href="submenu.css" type="text/css" rel="stylesheet">
 		<link href="gallery.css" type="text/css" rel="stylesheet">
 	</head>
