--- a/CoC.html
+++ b/CoC.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Bennys Homepage</title>
+		<title>Schwöbische Kreativität</title>
 		<link href="submenu.css" title="aaa" type="text/css" rel="stylesheet"/>
 		<link href="table.css" title="aaa" type="text/css" rel="stylesheet"/>
 		<link href="div.css" title="aaa" type="text/css" rel="stylesheet"/>
@@ -8,7 +8,7 @@
 <body bgcolor="#F7BE81">
 <meta charset="UTF-8">
 <div id="div2">
-<center><h1><i>Schwabaländle Online</i></h1></center>
+<center><h1><i>Schwäbsiche Kreativität</i></h1></center>
 <div style="background-color:#A9A9F5;
 			width:100%;
 			heigth:auto;">				
