--- a/CoC.html
+++ b/CoC.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Schwöbische Kreativität</title>
+		<title>Schwäbische Kreativität</title>
 		<link href="submenu.css" title="aaa" type="text/css" rel="stylesheet"/>
 		<link href="table.css" title="aaa" type="text/css" rel="stylesheet"/>
 		<link href="div.css" title="aaa" type="text/css" rel="stylesheet"/>
